# sycophancy-lang-resources-d777-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  requirements.txt  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/figures/: qwen_direction_norms.tex  tier_comparison.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: bullshitbench_per_language.tex  main_behavior.tex  mkqa_per_language.tex  qwen_interventions.tex
paper_search_results/: LLM_sycophancy_multilingual_low-resource_languages_language_resource_20260413_045509.jsonl
papers/: README.md
papers/pages/: 2007.15207v2_mkqa_manifest.txt  2310.13548v4_towards_understanding_sycophancy_manifest.txt  2409.01658v3_yes_men_to_truth_tellers_manifest.txt  2410.18270v1_multilingual_hallucination_gaps_manifest.txt  2602.00046v1_extending_beacon_hindi_manifest.txt
research_workspace/: __init__.py
results/analysis/: api_base_bullshitbench_labels.jsonl  api_truth_prompt_bullshitbench_labels.jsonl  environment.json  fisher_results.json  metrics_summary.csv  (+4 more)
src/: run_full_study.py
(+14 files in other folders)
