[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "arxiv>=3.0.0",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "openai>=2.31.0",
    "pandas>=2.3.3",
    "pypdf>=6.10.0",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "statsmodels>=0.14.6",
    "tenacity>=9.1.4",
    "transformers>=5.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
